# pythonicpp

./: .clang-format  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  README.md
.cache/clangd/index/: string.hpp.5911D9B7BAD1197C.idx  test_string.cpp.234C6D1B9A313BF3.idx
include/pythonicpp/: string.hpp
test/: CMakeLists.txt  test_string.cpp
